tree-sitter-hs2/grammar.js
    module: $ => choice(
      seq(
        repeat($.language_pragma),
        'module',
        choice($.qualified_module_identifier, $.module_identifier),
        optional(choice($.warning_pragma, $.deprecated_pragma)),
        optional($.module_exports),
        alias($._top_where, $.where)
      ),
      seq(
        repeat($.language_pragma),
        repeat(seq($._top_declaration, choice(';', $._layout_semicolon)))
      )
    ),

    _top_declaration: $ => choice(
      $.import_declaration,
      $.qualified_import_declaration,
      $.type_synonym_declaration,
      $.algebraic_datatype_declaration,
      $.newtype_declaration,
      $.type_class_declaration,
      $.type_class_instance_declaration,
      $.default_declaration,
      $.foreign_import_declaration,
      $.foreign_export_declaration,
      $.standalone_deriving_declaration,
      $._declaration
    ),

    standalone_deriving_declaration: $ => seq(
      'deriving',
      'instance',
      optional(choice(
        $.overlaps_pragma,
        $.overlapping_pragma,
        $.overlappable_pragma,
        $.incoherent_pragma
      )),
      optional($.scontext),
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      $.instance
    ),

    type_synonym_declaration: $ => seq(
      'type',
      $._simple_type,
      '=',
      alias($._type_pattern, $.type)
    ),

    promoted: $ => seq(
      '\'',
      $._general_constructor
    ),

    _general_constructor: $ => choice(
      $._constructor,
      $._qualified_constructor,
      $.unit_constructor,
      $.list_constructor,
      $.function_constructor,
      $.tupling_constructor
    ),

    unit_constructor: $ => seq('(', ')'),
    list_constructor: $ => seq('[', ']'),
    function_constructor: $ => seq('(', '->', ')'),
    tupling_constructor: $ => seq('(', ',', repeat(','), ')'),

    _top_where: $ => seq(
      'where',
      $._top_declarations
    ),

    fields: $ => seq(
      '{',
      sep1(',', choice($.field, $.field_label)),
      '}'
    ),

    default_declaration: $ => seq(
      'default',
      '(',
      optional(sep1(',', $._type_pattern)),
      ')'
    ),

    instance: $ => repeat1($._type_pattern),

    type_signature: $ => seq(
      sep1(',', $._variable),
      alias('::', $.annotation),
      optional($.context),
      optional($.scoped_type_variables),
      $._type_pattern
    ),

    scoped_type_variables: $ => seq(
      'forall',
      repeat1($.variable_identifier),
      '.'
    ),

    _type_pattern: $ => prec.left(choice(
      $._type,
      $.function_type,
      $.infix_type_operator_application
    )),

    _type: $ => prec.left(repeat1($._atype)),

    function_type: $ => prec.right(seq(
      alias($._type, $.type),
      '->',
      choice(alias($._type, $.type), $.function_type)
    )),

    _atype: $ => choice(
      $._general_type_constructor,
      $.type_variable_identifier,
      $.tuple_type,
      $.list_type,
      $.parenthesized_constructor
    ),

    infix_type_operator_application: $ => prec.right(seq(
      alias($._type_pattern, $.type),
      $.type_operator,
      $._type_pattern
    )),

    tuple_type: $ => seq(
      '(',
      $._type_pattern,
      ',',
      sep1(',', $._type_pattern),
      ')'
    ),

    list_type: $ => seq(
      '[',
      $._type_pattern,
      ']'
    ),

    parenthesized_constructor: $ => seq(
      '(',
      $._type_pattern,
      ')'
    ),

    algebraic_datatype_declaration: $ => seq(
      'data',
      optional($.context),
      $._simple_type,
      optional(
        seq(
          '=',
          $.constructors,
          optional($.deriving)
        )
      )
    ),

    _simple_type: $ => seq(
      $.type_constructor_identifier,
      repeat($.type_variable_identifier)
    ),

    scontext: $ => seq(
      choice(
        $.simple_class,
        seq(
          '(',
          optional(sep1(',', $.simple_class)),
          ')'
        ),
      ),
      '=>'
    ),

    context: $ => prec(1, seq(
      choice(
        $.class,
        seq(
          '(',
          optional(sep1(',', $.class)),
          ')'
        ),
      ),
      '=>'
    )),

    simple_class: $ => seq(
      choice($.qualified_type_class_identifier, $.type_class_identifier),
      repeat1($.type_variable_identifier),
      optional($.parenthesized_type_variables)
    ),

    parenthesized_type_variables: $ => seq(
      '(',
      repeat1($.type_variable_identifier),
      ')'
    ),

    class: $ => choice(
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        $.type_variable_identifier
      ),
      seq(
        choice(
          $.constructor_identifier,
          $.qualified_constructor_identifier
        ),
        '(',
        $.type_variable_identifier,
        repeat1($._atype),
        ')'
      )
    ),

    constructors: $ => sep1(
      '|',
      choice(
        $.data_constructor,
        $.infix_data_constructor,
        $.record_data_constructor
      )
    ),

    data_constructor: $ => seq(
      $._constructor,
      repeat(
        seq(
          optional(
            choice(
              $.unpack_pragma,
              $.no_unpack_pragma
            )
          ),
          choice(
            $.strict_type,
            $._atype
          )
        )
      )
    ),

    strict_type: $ => seq(
      '!',
      $._type_pattern
    ),

    record_data_constructor: $ => seq($._constructor, $.fields),

    deriving: $ => seq(
      'deriving',
      choice(
        choice($.qualified_type_class_identifier, $.type_class_identifier),
        seq(
          '(',
          optional(sep1(',', choice($.qualified_type_class_identifier, $.type_class_identifier))),
          ')'
        )
      )
    ),

    newtype_declaration: $ => seq(
      'newtype',
      optional($.context),
      $._simple_type,
      '=',
      $.new_constructor,
      optional($.deriving)
    ),

    new_constructor: $ => choice(
      seq(
        $._constructor,
        $._atype
      ),
      seq(
        $._constructor,
        $.fields
      )
    ),

    field: $ => prec.left(seq(
      sep1(',', $._variable),
      alias('::', $.annotation),
      choice(
        $.strict_type,
        $._type_pattern
      )
    )),

    _variable: $ => choice(
      $.variable_identifier,
      seq(
        '(',
        $.variable_operator,
        ')'
      )
    ),

    _constructor: $ => choice(
      $.constructor_identifier,
      seq(
        '(',
        $.constructor_operator,
        ')'
      )
    ),

    constructor_identifier: $ => $._constructor_identifier,

    type_constructor_identifier: $ => $._constructor_identifier,

    // Higher precedence here to disambiguate scontext
    type_class_identifier: $ => prec(-1, $._constructor_identifier),

    _constructor_identifier: $ => /[A-Z](\w|')*/,

    variable_identifier: $ => $._variable_identifier,

    type_variable_identifier: $ => $._variable_identifier,

    type_operator: $ => token(seq(
      '\'',
      repeat1(choice(variable_symbol, restricted_variable_symbol))
    )),

    _variable_identifier: $ => /[_a-z](\w|')*/,
